<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/my_toolbar3" layout="@layout/toolbar"></include>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/lamp"
        android:scaleType="centerCrop"
        android:tint="#8c000000"
        android:layout_alignParentBottom="true"
        android:paddingTop="54dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="64dp"
        android:layout_marginTop="64dp">
        <TextView
            android:id="@+id/tv_update_journal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_journal"
            android:textAlignment="center"
            android:textSize="28sp"
            android:layout_marginBottom="16dp"
            android:textColor="#00C5F3"/>
        <EditText
            android:id="@+id/et_journal_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Entry Title"
            android:inputType="textNoSuggestions"
            android:textColor="#FFFFFF"/>
        <EditText
            android:id="@+id/et_journal_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Entry Details"
            android:inputType="textMultiLine"
            android:maxLength="1500"
            android:textColor="#FFFFFF"/>
        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_centerInParent="true"
            android:text="@string/add_journal"
            android:textColor="#FFFFFF"
            android:padding="15dp"/>
    </LinearLayout>
</RelativeLayout>
