...
                    android:textSize="32sp"
                    android:textAlignment="center"
                    android:padding="48dp"
                    android:text="There is currently no journal kindly add a new journal from the app drawer menu"
                    android:visibility="gone"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_journal_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
...
